Fix bug - forgot lover investigator result

--- a/mafia/index.html
+++ b/mafia/index.html
@@ -468,7 +468,7 @@
       const investValues = {
         "mafioso": "Vigilante, Veteran, Mafioso",
         "godfather": "Bodyguard, Godfather, Arsonist",
-        "janitor": "Retributionist, Janitor",
+        "janitor": "Retributionist, Lover, Janitor",
         "framer": "Framer, Vampire, Jester",
         "consiglier": "Investigator, Consigliere, Mayor",
         "bodyguard": "Bodyguard, Godfather, Arsonist",
@@ -479,7 +479,7 @@
         "jailor": "Spy, Blackmailer, Jailor",
         "lookout": "Lookout, Witch",
         "mayor": "Investigator, Consigliere, Mayor",
-        "retributionist": "Retributionist, Janitor",
+        "retributionist": "Retributionist, Lover, Janitor",
         "spy": "Spy, Blackmailer, Jailor",
         "transporter": "Transporter, Escort, Consort",
         "vampirehunter": "Survivor, Vampire Hunter, Amnesiac",
@@ -497,6 +497,7 @@
         "vampire": "Framer, Vampire, Jester",
         "witch": "Lookout, Witch",
         "werewolf": "Sheriff, Executioner, Werewolf",
+        "lover": "Retributionist, Lover, Janitor"
       };
       const defenseValues = {
         basic: ["serialkiller","werewolf","arsonist","executioner","godfather"],
