Remove more old projects

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>theusaf's Website!</title>
         <script src="index.js" type="text/javascript"></script>
         <link href="index.css" rel="stylesheet" type="text/css"></link>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <style>
             @import url('https://fonts.googleapis.com/css?family=Spectral+SC');
         </style>
@@ -13,7 +14,7 @@
         <h1 id=test>TEST</h1>
         <div style="width: 100%; background: grey; text-align: center" id="top">
             <a href="/mafia/" title="Town of Salem based game! [Offline]" style="display: block; text-decoration: none"><span style="color: red"><b>IRL Mafia Assistant</b></span></a>
-            <a href="/MCRecipe/" title="Minecraft Command Updater 1.12 to 1.13" style="display: block; text-decoration: none"><span style="color: green"><b>Command Updater</b></span></a>
+            <a href="/MCRecipe/" title="Minecraft Command Updater 1.12 to 1.13 (Unmaintained)" style="display: block; text-decoration: none"><span style="color: green"><b>Command Updater</b></span></a>
             <a href="/TI30XCalc/" title="Calculator Tricks for the TI30XIIS" style="display: block; text-decoration: none"><span style="color: black"><b>Calculator Hacks</b></span></a>
             <a href="/3d Engine Test/" title="3D Engine Test (thanks to tbpatj on Scratch)" style="display: block; text-decoration: none"><span style="color: orange"><b>3d Engine JS</b></span></a>
         </div>
