--- a/pogo/index.html
+++ b/pogo/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css" type="text/css" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
         <div class="half">
