Add silly UI to GetWeather

--- a/GetWeather/index.html
+++ b/GetWeather/index.html
@@ -7,6 +7,49 @@
     <title>Get Weather!</title>
   </head>
   <body>
+    <div id="cont">
+      <div id="output">
+        <div id="forecast">
+          <div class="day">
+
+          </div>
+          <div class="day">
+
+          </div>
+          <div class="day">
+
+          </div>
+          <div class="day">
+
+          </div>
+          <div class="day">
+
+          </div>
+          <div class="day now">
+
+          </div>
+        </div>
+        <h3>Output && Forecast</h3>
+      </div>
+      <div id="form">
+        <div class="thing">
+          <div id="left">
+            <button type="submit" class="sub" name="submit">GET Weather!</button>
+            <span>
+              <input tabindex="-1" type="radio" name="degree" id="cel" class="nope" value="C">
+              <label for="cel" class="nope">Celcius</label>
+            </span>
+            <span>
+              <input tabindex="-1" type="radio" name="degree" id="fahr" class="nope" value="F">
+              <label for="fahr" class="nope">Fahrenheit</label>
+            </span>
+            <span>Choose Degree Type</span>
+            <input type="text" id="loc" name="Location" value="" placeholder="Hello World">
+            <label for="loc">Enter Location Name</label>
+          </div>
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
