--- a/kahoot winner error.html
+++ b/kahoot winner error.html
@@ -10,15 +10,19 @@
       body{
         font-family: 'Montserrat', sans-serif;
       }
+      marquee{
+        height: 5rem;
+      }
     </style>
     <h1>What is this?</h1>
-    <p>If you are seeing this page, that means that Kahoot Winner is down. This is most likely an issue with the server being overloaded and running out of memory, but it could be another issues.</p>
+    <p>If you are seeing this page, that means that Kahoot Winner is down. This is most likely an issue with the server being overloaded and running out of memory, but it could be another issue.</p>
     <p>In the meantime, just wait and when the server goes up, you should be redirected back to Kahoot Winner.</p>
     <noscript>
       On second thought, you might have to do that yourself because you aren't allowing javascript on this page.
     </noscript>
     <p>Current state: <span id="status">DOWN</span></p>
-    <marquee really="yes, really, I know this tag is deprecated but who cares, text go brrrrrrrrr">Checking status of kahoot-win</marquee>
+    <marquee direction="down" really="yes, really, I know this tag is deprecated but who cares, text go brrrrrrrrr">Checking status of kahoot-win</marquee>
+    <h3>Feel free to join the <a href="https://discord.gg/58SHzC2" target="_blank">Discord server</a> to discuss issues as well.</h3>
     <script type="text/javascript">
       let url = location.hostname === "kahoot-win.herokuapp.com" ? "/up" : "https://kahoot-win.herokuapp.com/up";
       function check(t){
