update error page

--- a/kahoot winner error.html
+++ b/kahoot winner error.html
@@ -17,6 +17,7 @@
     <h1>What is this?</h1>
     <p>If you are seeing this page, that means that Kahoot Winner is down. This is most likely an issue with the server being overloaded and running out of memory, but it could be another issue.</p>
     <p>In the meantime, just wait and when the server goes up, you should be redirected back to Kahoot Winner.</p>
+    <p>You may also download the application from here: <a href="https://archive.org/details/kahoot-win">https://archive.org/details/kahoot-win</a></p>
     <noscript>
       On second thought, you might have to do that yourself because you aren't allowing javascript on this page.
     </noscript>
