--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
     <!-- Imports HTML from https://theusaf.weebly.com to make editing easier :p It works:p-->
     <head>
-        <link rel="shortcut icon" href="http://theusaf.weebly.com/uploads/3/8/8/3/38839699/theusaf-1_orig.png"></link>
         <title>theusaf's Website!</title>
         <script src="index.js" type="text/javascript"></script>
         <link href="index.css" rel="stylesheet" type="text/css"></link>
@@ -12,31 +11,27 @@
     </head>
     <body id="body">
         <h1 id=test>TEST</h1>
-        <div style="width: 100%; background: grey; text-align: center" id="top">
-            <a href="/mafia/" title="Town of Salem based game! [Offline]" style="display: block; text-decoration: none"><span style="color: red"><b>IRL Mafia Assistant</b></span></a>
-            <a href="/MCRecipe/" title="Minecraft Command Updater 1.12 to 1.13 (Unmaintained)" style="display: block; text-decoration: none"><span style="color: green"><b>Command Updater</b></span></a>
+        <div style="width: 100%; text-align: center" id="top">
+          <div>
+            <a href="/mafia/" title="Town of Salem based game! [Offline]" style="display: block; text-decoration: none"><span style="color: #a10"><b>IRL Mafia Assistant</b></span></a>
             <a href="/TI30XCalc/" title="Calculator Tricks for the TI30XIIS" style="display: block; text-decoration: none"><span style="color: black"><b>Calculator Hacks</b></span></a>
             <a href="/3d Engine Test/" title="3D Engine Test (thanks to tbpatj on Scratch)" style="display: block; text-decoration: none"><span style="color: orange"><b>3d Engine JS</b></span></a>
+          </div>
         </div>
-        <div thisisfor=youtube>
-            <div style="background: grey; width: 70%; margin-left: 15%">
-                <p style="text-align: center;">This is my main <a href="https://theusaf.weebly.com">YouTube website</a></p>
-                <p style="text-align:center; color: red;">You may want to allow all scripts on this page for it to work.</p>
-            </div>
-            <iframe src="https://theusaf.weebly.com" style="width: 80%; height: 60%; margin-left: 10%; border: blue 3px solid;"></iframe>
+        <div class="links">
+          <div>
+            <h2>Projects and other sites:</h2>
+            <a href="https://kahoot-win.herokuapp.com">Kahoot Winner</a>
+            <li>Win any public Kahoot game using a single, powerful bot.</li>
+            <a href="https://theusaf.weebly.com">My Weebly Site</a>
+            <li>Learn about me.</li>
+            <a href="https://shortr.github.io">My Link Shortener</a>
+            <li>Shorten links and rickroll your friends.</li>
+            <a href="https://grammarsama.wordpress.com">Web Novel Translation Improvements</a>
+            <li>¯\_(ツ)_/¯</li>
+          </div>
         </div>
-        <div thisisfor=comic>
-            <div style="background: grey; width: 70%; margin-left: 15%">
-                <p style="text-align: center">This is my <a href="https://mabrane.weebly.com">webcomic</a></p>
-            </div>
-            <iframe src="https://mabrane.weebly.com" style="width: 80%; height: 60%; margin-left: 10%; border: solid green 3px"></iframe>
-        </div>
-        <div thisisfor=shortr>
-            <div style="background: grey; width: 70%; margin-left: 15%">
-                <p style="text-align: center">This is my <a href="https://shortr.github.io">link shortener</a></p>
-            </div>
-            <iframe src="https://shortr.github.io" style="width: 80%; height: 60%; margin-left: 10%; border: solid red 3px"></iframe>
-        </div>
+        <footer>&copy;theusaf 2020</footer>
         <div id="scripts">
             <script src="index.js" type="text/javascript"></script>
         </div>
