--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <style>
             @import url('https://fonts.googleapis.com/css?family=Spectral+SC');
         </style>
+        <script data-ad-client="ca-pub-7270149282957761" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
     <body id="body">
         <h1 id=test>TEST</h1>
