Update error page

--- a/kahoot winner error.html
+++ b/kahoot winner error.html
@@ -47,7 +47,7 @@
       <p>If you are seeing this page, that means that Kahoot Winner is down or is under maintenance. This is most likely an issue with the server being overloaded and running out of memory, but it could be another issue. The server should come back online in a few minutes.</p>
       <p>In the meantime, just wait or play the small minigame below and when the server goes up, you should be redirected back to Kahoot Winner.</p>
       <p><h4><strong>You may also download the application from here: <a href="https://archive.org/details/kahoot-win">https://archive.org/details/kahoot-win</a>.</strong></h4></p>
-      <p><h4><strong>You can also see alternate Kahoot sites here: <a href="https://kahoot.js.org/websites">kahoot.js.org/websites</a></strong></h4></p>
+      <p><h4><span id="alt"><strong>You can also see alternate Kahoot sites here: <a href="https://kahoot.js.org/websites">kahoot.js.org/websites</a></strong></span></h4></p>
       <noscript>
         On second thought, you might have to do that yourself because you aren't allowing javascript on this page.
       </noscript>
@@ -133,6 +133,17 @@
       }
       #g{
         background: #26890c;
+      }
+      #alt{
+        background: #ffdd33;
+        border-radius: 0.5rem;
+        padding: 1rem;
+        box-shadow: 0.25rem 0.25rem rgba(0,0,0,0.5);
+        color: black;
+        font-weight: 800;
+      }
+      #alt a{
+        color: black;
       }
     </style>
     <script>
