--- a/kahoot winner error.html
+++ b/kahoot winner error.html
@@ -84,7 +84,7 @@
           document.body.className = "green";
           document.getElementById("status").innerHTML = "UP! Redirecting...";
           setTimeout(()=>{
-            location.href = document.referer;
+            location.href = document.referrer;
           },2000);
         }
       }
